--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <link rel="stylesheet" type="text/css" href="styling.css">
 <html>
 <head>
-	<title>Ryan's SketchPad</title>
+	<title>Ryan's Grid of Awesomeness</title>
 </head>
 <header>
-<h1>Ryan's Sketch Pad</h1>
+<h1>Ryan's Grid of Awesomeness</h1>
 </header>
 
 <body>
@@ -14,6 +14,7 @@
 <div id="container">
 <div id="buttons">
 	<input type="Button" value="Reset Color" onclick="reset()" id="reset">
+	<input type="Button" value="Rebuild Grid" onclick="rebuild()" id="rebuild">
 </div>
 </div>
 
